Add test cases for JsonAdaptedPerson