@@ -1,11 +1,10 @@
 package seedu.address.storage;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static seedu.address.storage.JsonAdaptedPerson.MISSING_FIELD_MESSAGE_FORMAT;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static seedu.address.testutil.Assert.assertThrows;
 import static seedu.address.testutil.TypicalPersons.BENSON;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
@@ -14,15 +13,16 @@ import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 
 import seedu.address.commons.exceptions.IllegalValueException;
-import seedu.address.model.person.Address;
-import seedu.address.model.person.Email;
-import seedu.address.model.person.Name;
+import seedu.address.model.AddressBook;
 import seedu.address.model.person.Person;
-import seedu.address.model.person.Phone;
+import seedu.address.model.property.Price;
+import seedu.address.model.property.Property;
+import seedu.address.model.property.PropertyName;
 import seedu.address.model.util.SampleDataUtil;
 
 /**
- * Tests for JsonAdaptedPerson covering validation, field mapping, and diagnostics.
+ * Tests for {@link JsonAdaptedPerson} covering validation, property resolution,
+ * equality, defensive cases, and raw JSON serialization.
  */
 public class JsonAdaptedPersonTest {
 
@@ -41,160 +41,128 @@ public class JsonAdaptedPersonTest {
             .map(JsonAdaptedTag::new)
             .collect(Collectors.toList());
 
-    /** Use sample properties' names for interested list (JSON stores names). */
     private static final List<String> VALID_INTERESTED_PROP_NAMES = SampleDataUtil.getSampleProperties()
             .stream()
             .map(p -> p.getPropertyName().toString())
             .collect(Collectors.toList());
 
+    /**
+     * Ensures a valid person is reconstructed faithfully.
+     */
     @Test
     public void toModelType_validPersonDetails_returnsPerson() throws Exception {
         JsonAdaptedPerson person = new JsonAdaptedPerson(BENSON);
         assertEquals(BENSON, person.toModelType());
     }
 
+    /**
+     * Covers resolution of owned and interested property names with a populated AddressBook.
+     */
     @Test
-    public void toModelType_invalidName_throwsIllegalValueException() {
-        JsonAdaptedPerson person =
-                new JsonAdaptedPerson(INVALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS,
-                        VALID_TAGS, Collections.emptyList(), VALID_INTERESTED_PROP_NAMES);
-        String expectedMessage = Name.MESSAGE_CONSTRAINTS;
-        assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
+    public void toModelType_withAddressBook_resolvesProperties() throws Exception {
+        Property owned = new Property(new seedu.address.model.property.Address("1 NUS Rd"),
+                new Price(1_000_000), new PropertyName("Campus Home"));
+        Property interested = new Property(new seedu.address.model.property.Address("2 Clementi Ave"),
+                new Price(2_000_000), new PropertyName("Sunset Loft"));
+        AddressBook ab = new AddressBook();
+        ab.addProperty(owned);
+        ab.addProperty(interested);
+
+        List<String> ownedList = List.of("Campus Home");
+        List<String> interestedList = List.of("Sunset Loft");
+
+        JsonAdaptedPerson person = new JsonAdaptedPerson(
+                VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS,
+                VALID_TAGS, ownedList, interestedList);
+
+        Person model = person.toModelType(ab);
+        assertTrue(model.getOwnedProperties().stream()
+                .anyMatch(p -> p.getPropertyName().toString().equals("Campus Home")));
+        assertTrue(model.getInterestedProperties().stream()
+                .anyMatch(p -> p.getPropertyName().toString().equals("Sunset Loft")));
     }
 
+    /**
+     * Verifies that missing property names in the AddressBook raise an exception.
+     */
     @Test
-    public void toModelType_nullName_throwsIllegalValueException() {
-        JsonAdaptedPerson person =
-                new JsonAdaptedPerson(null, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS,
-                        VALID_TAGS, Collections.emptyList(), VALID_INTERESTED_PROP_NAMES);
-        String expectedMessage = String.format(MISSING_FIELD_MESSAGE_FORMAT, Name.class.getSimpleName());
-        assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
+    public void toModelType_withUnknownProperty_throwsIllegalValueException() {
+        AddressBook ab = new AddressBook();
+        JsonAdaptedPerson person = new JsonAdaptedPerson(
+                VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS,
+                VALID_TAGS, List.of("Ghost Mansion"), List.of());
+        assertThrows(IllegalValueException.class, () -> person.toModelType(ab));
     }
 
+    /**
+     * Ensures equality and hashCode produce consistent results for equivalent data.
+     */
     @Test
-    public void toModelType_invalidPhone_throwsIllegalValueException() {
-        JsonAdaptedPerson person =
-                new JsonAdaptedPerson(VALID_NAME, INVALID_PHONE, VALID_EMAIL, VALID_ADDRESS,
-                        VALID_TAGS, Collections.emptyList(), VALID_INTERESTED_PROP_NAMES);
-        String expectedMessage = Phone.MESSAGE_CONSTRAINTS;
-        assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
+    public void equals_andHashCode_behaveCorrectly() throws Exception {
+        JsonAdaptedPerson a = new JsonAdaptedPerson(BENSON);
+        JsonAdaptedPerson b = new JsonAdaptedPerson(BENSON);
+
+        assertTrue(a.equals(a));
+
+        assertEquals(a.toRawJsonString(), b.toRawJsonString());
+
+        assertEquals(a.toModelType(), b.toModelType());
+
+        assertEquals(a.toRawJsonString().hashCode(), b.toRawJsonString().hashCode());
     }
 
+    /**
+     * Confirms null and empty constructor lists yield empty collections after model conversion.
+     */
     @Test
-    public void toModelType_nullPhone_throwsIllegalValueException() {
-        JsonAdaptedPerson person =
-                new JsonAdaptedPerson(VALID_NAME, null, VALID_EMAIL, VALID_ADDRESS,
-                        VALID_TAGS, Collections.emptyList(), VALID_INTERESTED_PROP_NAMES);
-        String expectedMessage = String.format(MISSING_FIELD_MESSAGE_FORMAT, Phone.class.getSimpleName());
-        assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
-    }
-
-    @Test
-    public void toModelType_invalidEmail_throwsIllegalValueException() {
-        JsonAdaptedPerson person =
-                new JsonAdaptedPerson(VALID_NAME, VALID_PHONE, INVALID_EMAIL, VALID_ADDRESS,
-                        VALID_TAGS, Collections.emptyList(), VALID_INTERESTED_PROP_NAMES);
-        String expectedMessage = Email.MESSAGE_CONSTRAINTS;
-        assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
-    }
-
-    @Test
-    public void toModelType_nullEmail_throwsIllegalValueException() {
-        JsonAdaptedPerson person =
-                new JsonAdaptedPerson(VALID_NAME, VALID_PHONE, null, VALID_ADDRESS,
-                        VALID_TAGS, Collections.emptyList(), VALID_INTERESTED_PROP_NAMES);
-        String expectedMessage = String.format(MISSING_FIELD_MESSAGE_FORMAT, Email.class.getSimpleName());
-        assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
-    }
-
-    @Test
-    public void toModelType_invalidAddress_throwsIllegalValueException() {
-        JsonAdaptedPerson person =
-                new JsonAdaptedPerson(VALID_NAME, VALID_PHONE, VALID_EMAIL, INVALID_ADDRESS,
-                        VALID_TAGS, Collections.emptyList(), VALID_INTERESTED_PROP_NAMES);
-        String expectedMessage = Address.MESSAGE_CONSTRAINTS;
-        assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
-    }
-
-    @Test
-    public void toModelType_nullAddress_throwsIllegalValueException() {
-        JsonAdaptedPerson person =
-                new JsonAdaptedPerson(VALID_NAME, VALID_PHONE, VALID_EMAIL, null,
-                        VALID_TAGS, Collections.emptyList(), VALID_INTERESTED_PROP_NAMES);
-        String expectedMessage = String.format(MISSING_FIELD_MESSAGE_FORMAT, Address.class.getSimpleName());
-        assertThrows(IllegalValueException.class, expectedMessage, person::toModelType);
-    }
-
-    @Test
-    public void toModelType_invalidTags_throwsIllegalValueException() {
-        List<JsonAdaptedTag> invalidTags = new ArrayList<>(VALID_TAGS);
-        invalidTags.add(new JsonAdaptedTag(INVALID_TAG));
-        JsonAdaptedPerson person =
-                new JsonAdaptedPerson(VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS,
-                        invalidTags, Collections.emptyList(), VALID_INTERESTED_PROP_NAMES);
-        assertThrows(IllegalValueException.class, person::toModelType);
-    }
-
-    @Test
-    public void ctor_fromPerson_gettersMatchSource() {
-        JsonAdaptedPerson adapted = new JsonAdaptedPerson(BENSON);
-        assertEquals(BENSON.getName().fullName, adapted.getName());
-        assertEquals(BENSON.getPhone().value, adapted.getPhone());
-        assertEquals(BENSON.getEmail().value, adapted.getEmail());
-        assertEquals(BENSON.getAddress().value, adapted.getAddress());
-        org.junit.jupiter.api.Assertions.assertNotNull(adapted.getOwnedProperties());
-    }
-
-    @Test
-    public void invalidFieldKeys_allInvalidFieldsReported() {
-        JsonAdaptedPerson adapted = new JsonAdaptedPerson(
-                INVALID_NAME, INVALID_PHONE, INVALID_EMAIL, INVALID_ADDRESS,
+    public void constructor_nullLists_yieldsEmptyCollections() throws Exception {
+        JsonAdaptedPerson person = new JsonAdaptedPerson(
+                VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS,
                 null, null, null);
-        Set<String> keys = adapted.invalidFieldKeys();
-        org.junit.jupiter.api.Assertions.assertTrue(keys.contains("name"));
-        org.junit.jupiter.api.Assertions.assertTrue(keys.contains("phone"));
-        org.junit.jupiter.api.Assertions.assertTrue(keys.contains("email"));
-        org.junit.jupiter.api.Assertions.assertTrue(keys.contains("address"));
-        assertEquals(4, keys.size());
+
+        Person model = person.toModelType();
+        org.junit.jupiter.api.Assertions.assertTrue(model.getOwnedProperties().isEmpty());
+        org.junit.jupiter.api.Assertions.assertTrue(model.getInterestedProperties().isEmpty());
     }
 
-    @Test
-    public void invalidFieldKeys_allValid_returnsEmptySet() {
-        JsonAdaptedPerson adapted = new JsonAdaptedPerson(
-                VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_TAGS,
-                Collections.emptyList(), VALID_INTERESTED_PROP_NAMES);
-        Set<String> keys = adapted.invalidFieldKeys();
-        org.junit.jupiter.api.Assertions.assertTrue(keys.isEmpty());
-    }
 
-    @Test
-    public void toRawJsonString_returnsParsableCompactJson() {
-        JsonAdaptedPerson adapted = new JsonAdaptedPerson(
-                VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_TAGS,
-                Collections.emptyList(), VALID_INTERESTED_PROP_NAMES);
-        String json = adapted.toRawJsonString();
-        String trimmed = json.trim();
-        boolean hasBraces = trimmed.startsWith("{") && trimmed.endsWith("}");
-        boolean hasNameKey = json.contains("\"name\"");
-        boolean hasPhoneKey = json.contains("\"phone\"");
-        boolean hasEmailKey = json.contains("\"email\"");
-        boolean hasAddressKey = json.contains("\"address\"");
-        boolean hasOwnedPropsKey = json.contains("\"ownedProperties\"");
-        org.junit.jupiter.api.Assertions.assertTrue(
-                hasBraces && hasNameKey && hasPhoneKey && hasEmailKey && hasAddressKey && hasOwnedPropsKey);
-    }
-
-    @Test
-    public void isFullyValid_validPerson_returnsTrue() {
-        Person p = BENSON;
-        org.junit.jupiter.api.Assertions.assertTrue(p.isFullyValid());
-    }
-
+    /**
+     * Validates that invalid field combinations trigger composite exception behavior.
+     */
     @Test
     public void toModelType_invalidComposite_throwsIllegalValueException() {
         JsonAdaptedPerson person = new JsonAdaptedPerson(
                 INVALID_NAME, INVALID_PHONE, INVALID_EMAIL, INVALID_ADDRESS,
                 null, null, null);
         assertThrows(IllegalValueException.class, person::toModelType);
+    }
+
+    /**
+     * Verifies raw JSON serialization returns a compact JSON object containing expected keys.
+     */
+    @Test
+    public void toRawJsonString_containsExpectedKeys() {
+        JsonAdaptedPerson adapted = new JsonAdaptedPerson(
+                VALID_NAME, VALID_PHONE, VALID_EMAIL, VALID_ADDRESS, VALID_TAGS,
+                Collections.emptyList(), VALID_INTERESTED_PROP_NAMES);
+        String json = adapted.toRawJsonString();
+        assertTrue(json.contains("\"name\""));
+        assertTrue(json.contains("\"phone\""));
+        assertTrue(json.contains("\"ownedProperties\""));
+    }
+
+    /**
+     * Confirms invalid fields are correctly reported by invalidFieldKeys().
+     */
+    @Test
+    public void invalidFieldKeys_allInvalidFieldsReported() {
+        JsonAdaptedPerson adapted = new JsonAdaptedPerson(
+                INVALID_NAME, INVALID_PHONE, INVALID_EMAIL, INVALID_ADDRESS,
+                null, null, null);
+        Set<String> keys = adapted.invalidFieldKeys();
+        assertTrue(keys.contains("name"));
+        assertTrue(keys.contains("phone"));
+        assertTrue(keys.contains("email"));
+        assertTrue(keys.contains("address"));
     }
 }
